--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /docu/Dokumentation_Flying_Etiquette.synctex.gz
 /docu/Dokumentation_Flying_Etiquette.log
 /docu/Dokumentation_Flying_Etiquette.aux
+Dokumentation_Flying_Etiquette.out
