added table of contents

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /docu/Dokumentation_Flying_Etiquette.log
 /docu/Dokumentation_Flying_Etiquette.aux
 Dokumentation_Flying_Etiquette.out
+/docu/Dokumentation_Flying_Etiquette.toc
